--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 cifar-10-batches-py
 experiment.py
 __pycache__
+C:\Users\Spyrus\Desktop\School_Projects\Current\Informatics\Project\DeepLearningProjects-First\first\__pycache__
