--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ cifar-10-batches-py
 experiment.py
 __pycache__
 C:\Users\Spyrus\Desktop\School_Projects\Current\Informatics\Project\DeepLearningProjects-First\first\__pycache__
+C:\Users\Spyrus\Desktop\School_Projects\Current\Informatics\Project\DeepLearningProjects-First\first\*.png
